-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 22
-
Component/s: hotspot
-
b22
-
x86_64
-
linux
serviceability/jvmti/vthread/SelfSuspendDisablerTest/SelfSuspendDisablerTest.java#no-vmcontinuations
Here's a snippet from the log file:
#section:main
----------messages:(8/488)----------
command: main -agentlib:SelfSuspendDisablerTest -XX:+UnlockExperimentalVMOptions -XX:-VMContinuations SelfSuspendDisablerTest
reason: User specified action: run main/othervm/native -agentlib:SelfSuspendDisablerTest -XX:+UnlockExperimentalVMOptions -XX:-VMContinuations SelfSuspendDisablerTest
started: Thu Sep 21 08:33:46 UTC 2023
Mode: othervm [/othervm specified]
Timeout information:
--- Timeout information end.
finished: Thu Sep 21 08:54:44 UTC 2023
elapsed time (seconds): 1258.11
----------configuration:(0/0)----------
----------System.out:(9/382)----------
Agent init started
Agent init finished
Expected platform thread state: 000000 got: 000000
Expected virtual thread state: 000000 got: 000000
Expected platform thread state: 000005 got: 000005
Expected virtual thread state: 000005 got: 000005
Expected platform thread state: 100005 got: 100005
Expected virtual thread state: 100005 got: 100005
Timeout signalled after 1200 seconds
----------System.err:(0/0)----------
----------rerun:(39/7972)*----------
<snip>
result: Error. Program `/opt/mach5/mesos/work_dir/jib-master/install/jdk-22+16-1243/linux-x64-debug.jdk/jdk-22/fastdebug/bin/java' timed out (timeout set to 1200000ms, elapsed time including timeout handling was 1258081ms).
- duplicates
-
JDK-8312064 assert(!thread->is_in_VTMS_transition()) failed: sanity check
-
- Closed
-
-
JDK-8353544 EXCEPTION_ACCESS_VIOLATION in vframeStream after JDK-8319447
-
- Closed
-
-
JDK-8295355 serviceability/jvmti/SuspendWithCurrentThread/SuspendWithCurrentThread.java timed out
-
- Closed
-
-
JDK-8305621 jvmti/vthread/SuspendResume1 fails "assert(_frame_index >= 0) failed: Using offset with a non-chunk frame"
-
- Closed
-
-
JDK-8294313 runtime/handshake/HandshakeSuspendExitTest.java crashes with assert(!single_suspend || (!is_virtual && java_thread->is_carrier_thread_suspended()) || (is_virtual && JvmtiVTSuspender::is_vthread_suspended(thread_h()))) failed: sanity check #
-
- Closed
-
- links to
-
Commit(master)
openjdk/jdk/9a23f721
-
Review(master)
openjdk/jdk/24269